Add new references

--- a/Paper/refs.bib
+++ b/Paper/refs.bib
@@ -3702,3 +3702,558 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...755...51N},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2014MNRAS.445.1370K,
+   author = {{Kun}, E. and {Gab{\'a}nyi}, K.~{\'E}. and {Karouzos}, M. and 
+	{Britzen}, S. and {Gergely}, L.~{\'A}.},
+    title = "{A spinning supermassive black hole binary model consistent with VLBI observations of the S5 1928+738 jet}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1402.2644},
+ primaryClass = "astro-ph.HE",
+ keywords = {galaxies: active, quasars: individual: S5 1928+738},
+     year = 2014,
+    month = dec,
+   volume = 445,
+    pages = {1370-1382},
+      doi = {10.1093/mnras/stu1813},
+   adsurl = {http://adsabs.harvard.edu/abs/2014MNRAS.445.1370K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2000A&A...360...57R,
+   author = {{Romero}, G.~E. and {Chajet}, L. and {Abraham}, Z. and {Fan}, J.~H.
+	},
+    title = "{Beaming and precession in the inner jet of 3C 273 --- II. The central engine}",
+  journal = {\aap},
+ keywords = {GALAXIES: QUASARS: INDIVIDUAL: 3C 273, GAMMA RAYS: THEORY, BLACK HOLE PHYSICS},
+     year = 2000,
+    month = aug,
+   volume = 360,
+    pages = {57-64},
+   adsurl = {http://adsabs.harvard.edu/abs/2000A%26A...360...57R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2001A&A...374..784B,
+   author = {{Britzen}, S. and {Roland}, J. and {Laskar}, J. and {Kokkotas}, K. and 
+	{Campbell}, R.~M. and {Witzel}, A.},
+    title = "{On the origin of compact radio sources. The binary black hole model applied to the gamma-bright quasar PKS 0420-014}",
+  journal = {\aap},
+ keywords = {BLACK HOLES PHYSICS, GRAVITATIONAL WAVES, QUASARS: INDIVIDUAL: PKS 04020-014, RADIO CONTINUUM: GALAXIES},
+     year = 2001,
+    month = aug,
+   volume = 374,
+    pages = {784-799},
+      doi = {10.1051/0004-6361:20010685},
+   adsurl = {http://adsabs.harvard.edu/abs/2001A%26A...374..784B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005A&A...431..831L,
+   author = {{Lobanov}, A.~P. and {Roland}, J.},
+    title = "{A supermassive binary black hole in the quasar 3C 345}",
+  journal = {\aap},
+   eprint = {astro-ph/0411417},
+ keywords = {galaxies: individual: 3C 345, galaxies: nuclei, galaxies: jets, radio continuum: galaxies},
+     year = 2005,
+    month = mar,
+   volume = 431,
+    pages = {831-846},
+      doi = {10.1051/0004-6361:20041831},
+   adsurl = {http://adsabs.harvard.edu/abs/2005A%26A...431..831L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012MNRAS.421.1861V,
+   author = {{Valtonen}, M.~J. and {Wiik}, K.},
+    title = "{Optical polarization angle and VLBI jet direction in the binary black hole model of OJ287}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1111.1539},
+ primaryClass = "astro-ph.HE",
+ keywords = {galaxies: active, BL Lacertae objects: individual: OJ287, galaxies: jets},
+     year = 2012,
+    month = apr,
+   volume = 421,
+    pages = {1861-1867},
+      doi = {10.1111/j.1365-2966.2011.20009.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.421.1861V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013MNRAS.428..280C,
+   author = {{Caproni}, A. and {Abraham}, Z. and {Monteiro}, H.},
+    title = "{Parsec-scale jet precession in BL Lacertae (2200+420)}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1210.2286},
+ primaryClass = "astro-ph.HE",
+ keywords = {galaxies: active, BL Lacertae objects: individual: BL Lacertae, galaxies: jets, radio continuum: galaxies},
+     year = 2013,
+    month = jan,
+   volume = 428,
+    pages = {280-290},
+      doi = {10.1093/mnras/sts014},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.428..280C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1999A&A...347...30V,
+   author = {{Villata}, M. and {Raiteri}, C.~M.},
+    title = "{Helical jets in blazars. I. The case of MKN 501}",
+  journal = {\aap},
+ keywords = {GALAXIES: BL LACERTAE OBJECTS: GENERAL, GALAXIES: BL LACERTAE OBJECTS: INDIVIDUAL: MKN 501, GALAXIES: JETS, GALAXIES: NUCLEI, GALAXIES: QUASARS: GENERAL},
+     year = 1999,
+    month = jul,
+   volume = 347,
+    pages = {30-36},
+   adsurl = {http://adsabs.harvard.edu/abs/1999A%26A...347...30V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{2003MNRAS.341..405S,
+   author = {{Stirling}, A.~M. and {Cawthorne}, T.~V. and {Stevens}, J.~A. and 
+	{Jorstad}, S.~G. and {Marscher}, A.~P. and {Lister}, M.~L. and 
+	{G{\'o}mez}, J.~L. and {Smith}, P.~S. and {Agudo}, I. and {Gabuzda}, D.~C. and 
+	{Robson}, E.~I. and {Gear}, W.~K.},
+    title = "{Discovery of a precessing jet nozzle in BL Lacertae}",
+  journal = {\mnras},
+ keywords = {polarization, BL Lacertae objects: general, BL Lacertae objects: individual: BL Lac, radio continuum: galaxies},
+     year = 2003,
+    month = may,
+   volume = 341,
+    pages = {405-422},
+      doi = {10.1046/j.1365-8711.2003.06448.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2003MNRAS.341..405S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2004MNRAS.349.1218C,
+   author = {{Caproni}, A. and {Abraham}, Z.},
+    title = "{Can long-term periodic variability and jet helicity in 3C 120 be explained by jet precession?}",
+  journal = {\mnras},
+   eprint = {astro-ph/0312407},
+ keywords = {galaxies: active, galaxies: individual: 3C 120, galaxies: jets, radio continuum: galaxies},
+     year = 2004,
+    month = apr,
+   volume = 349,
+    pages = {1218-1226},
+      doi = {10.1111/j.1365-2966.2004.07550.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2004MNRAS.349.1218C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008A&A...483..125R,
+   author = {{Roland}, J. and {Britzen}, S. and {Kudryavtseva}, N.~A. and 
+	{Witzel}, A. and {Karouzos}, M.},
+    title = "{Modeling nuclei of radio galaxies from VLBI radio observations. Application to the BL Lac Object S5 1803+784}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0805.2832},
+ keywords = {astrometry, galaxies: BL Lacertae objects: individual: 1803+784, galaxies: jets},
+     year = 2008,
+    month = may,
+   volume = 483,
+    pages = {125-135},
+      doi = {10.1051/0004-6361:20078521},
+   adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...483..125R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012ApJ...759..118B,
+   author = {{Bon}, E. and {Jovanovi{\'c}}, P. and {Marziani}, P. and {Shapovalova}, A.~I. and 
+	{Bon}, N. and {Borka Jovanovi{\'c}}, V. and {Borka}, D. and 
+	{Sulentic}, J. and {Popovi{\'c}}, L.~{\v C}.},
+    title = "{The First Spectroscopically Resolved Sub-parsec Orbit of a Supermassive Binary Black Hole}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1209.4524},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, galaxies: active, galaxies: interactions, galaxies: Seyfert, quasars: individual: NGC 4151, shock waves},
+     year = 2012,
+    month = nov,
+   volume = 759,
+      eid = {118},
+    pages = {118},
+      doi = {10.1088/0004-637X/759/2/118},
+   adsurl = {http://adsabs.harvard.edu/abs/2012ApJ...759..118B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.454.1290K,
+   author = {{Kun}, E. and {Frey}, S. and {Gab{\'a}nyi}, K.~{\'E}. and {Britzen}, S. and 
+	{Cseh}, D. and {Gergely}, L.~{\'A}.},
+    title = "{Constraining the parameters of the putative supermassive binary black hole in PG 1302-102 from its radio structure}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1506.07036},
+ primaryClass = "astro-ph.HE",
+ keywords = {techniques: interferometric, galaxies: active, quasars: individual: PG 1302-102, radio continuum: galaxies},
+     year = 2015,
+    month = dec,
+   volume = 454,
+    pages = {1290-1296},
+      doi = {10.1093/mnras/stv2049},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.454.1290K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015Natur.518...74G,
+   author = {{Graham}, M.~J. and {Djorgovski}, S.~G. and {Stern}, D. and 
+	{Glikman}, E. and {Drake}, A.~J. and {Mahabal}, A.~A. and {Donalek}, C. and 
+	{Larson}, S. and {Christensen}, E.},
+    title = "{A possible close supermassive black-hole binary in a quasar with optical periodicity}",
+  journal = {\nat},
+archivePrefix = "arXiv",
+   eprint = {1501.01375},
+     year = 2015,
+    month = feb,
+   volume = 518,
+    pages = {74-76},
+      doi = {10.1038/nature14143},
+   adsurl = {http://adsabs.harvard.edu/abs/2015Natur.518...74G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1981ApJ...246L..65I,
+   author = {{Icke}, V.},
+    title = "{Kinematic evidence for precessing beams in 3C 129}",
+  journal = {\apjl},
+ keywords = {Cosmic Plasma, Galactic Nuclei, Intergalactic Media, Magnetohydrodynamic Flow, Plasma Jets, Radio Sources (Astronomy), Astronomical Models, Galactic Structure, Kinematics, Plasma Generators, Radio Galaxies},
+     year = 1981,
+    month = jun,
+   volume = 246,
+    pages = {L65-L68},
+      doi = {10.1086/183554},
+   adsurl = {http://adsabs.harvard.edu/abs/1981ApJ...246L..65I},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1980ApJ...238L.129S,
+   author = {{Sarazin}, C.~L. and {Begelman}, M.~C. and {Hatchett}, S.~P.
+	},
+    title = "{Disk-driven precession in SS 433}",
+  journal = {\apjl},
+ keywords = {Binary Stars, Precession, Stellar Evolution, Stellar Mass Accretion, Variable Stars, X Ray Stars, Disks (Shapes), Stellar Mass Ejection, Stellar Models, Stellar Spectra},
+     year = 1980,
+    month = jun,
+   volume = 238,
+    pages = {L129-L132},
+      doi = {10.1086/183272},
+   adsurl = {http://adsabs.harvard.edu/abs/1980ApJ...238L.129S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{1982ApJ...258L..63G,
+   author = {{Gower}, A.~C. and {Hutchings}, J.~B.},
+    title = "{A precessing relativistic jet model for 3C 449}",
+  journal = {\apjl},
+ keywords = {Astronomical Models, Plasma Jets, Precession, Radio Galaxies, Relativistic Velocity, Galactic Nuclei, Galactic Structure},
+     year = 1982,
+    month = jul,
+   volume = 258,
+    pages = {L63-L66},
+      doi = {10.1086/183831},
+   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...258L..63G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{1982ApJ...253L...1G,
+   author = {{Gower}, A.~C. and {Hutchings}, J.~B.},
+    title = "{4C 18.68: A QSO with precessing radio jets?}",
+  journal = {\apjl},
+ keywords = {Quasars, Radio Jets (Astronomy), Radio Sources (Astronomy), Astronomical Maps, Linear Polarization, Red Shift},
+     year = 1982,
+    month = feb,
+   volume = 253,
+    pages = {L1-L5},
+      doi = {10.1086/183725},
+   adsurl = {http://adsabs.harvard.edu/abs/1982ApJ...253L...1G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008ApJ...676L...5L,
+   author = {{Lippai}, Z. and {Frei}, Z. and {Haiman}, Z.},
+    title = "{Prompt Shocks in the Gas Disk around a Recoiling Supermassive Black Hole Binary}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {0801.0739},
+ keywords = {Black Hole Physics, Galaxies: Nuclei, Gravitational Waves},
+     year = 2008,
+    month = mar,
+   volume = 676,
+    pages = {L5-L8},
+      doi = {10.1086/587034},
+   adsurl = {http://adsabs.harvard.edu/abs/2008ApJ...676L...5L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013MNRAS.436.2997D,
+   author = {{D'Orazio}, D.~J. and {Haiman}, Z. and {MacFadyen}, A.},
+    title = "{Accretion into the central cavity of a circumbinary disc}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1210.0536},
+ primaryClass = "astro-ph.GA",
+ keywords = {accretion, accretion discs, black hole physics, gravitational waves, galaxies: active},
+     year = 2013,
+    month = dec,
+   volume = 436,
+    pages = {2997-3020},
+      doi = {10.1093/mnras/stt1787},
+   adsurl = {http://adsabs.harvard.edu/abs/2013MNRAS.436.2997D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014ApJ...783..134F,
+   author = {{Farris}, B.~D. and {Duffell}, P. and {MacFadyen}, A.~I. and 
+	{Haiman}, Z.},
+    title = "{Binary Black Hole Accretion from a Circumbinary Disk: Gas Dynamics inside the Central Cavity}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1310.0492},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion disks, black hole physics},
+     year = 2014,
+    month = mar,
+   volume = 783,
+      eid = {134},
+    pages = {134},
+      doi = {10.1088/0004-637X/783/2/134},
+   adsurl = {http://adsabs.harvard.edu/abs/2014ApJ...783..134F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015ApJ...807..131S,
+   author = {{Shi}, J.-M. and {Krolik}, J.~H.},
+    title = "{Three-dimensional MHD Simulation of Circumbinary Accretion Disks. II. Net Accretion Rate}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1503.05561},
+ primaryClass = "astro-ph.HE",
+ keywords = {accretion, accretion disks, binaries: general, magnetohydrodynamics: MHD, methods: numerical},
+     year = 2015,
+    month = jul,
+   volume = 807,
+      eid = {131},
+    pages = {131},
+      doi = {10.1088/0004-637X/807/2/131},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJ...807..131S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1994ApJ...421..651A,
+   author = {{Artymowicz}, P. and {Lubow}, S.~H.},
+    title = "{Dynamics of binary-disk interaction. 1: Resonances and disk gap sizes}",
+  journal = {\apj},
+ keywords = {Accretion Disks, Binary Stars, Orbital Resonances (Celestial Mechanics), Pre-Main Sequence Stars, Stellar Envelopes, Stellar Gravitation, Stellar Mass Accretion, Stellar Systems, Astronomical Spectroscopy, Stellar Models, Stellar Spectra},
+     year = 1994,
+    month = feb,
+   volume = 421,
+    pages = {651-667},
+      doi = {10.1086/173679},
+   adsurl = {http://adsabs.harvard.edu/abs/1994ApJ...421..651A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.448.3603D,
+   author = {{Dotti}, M. and {Merloni}, A. and {Montuori}, C.},
+    title = "{Linking the fate of massive black hole binaries to the active galactic nuclei luminosity function}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1502.03101},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, gravitational waves, galaxies: active, galaxies: interactions, galaxies: nuclei},
+     year = 2015,
+    month = apr,
+   volume = 448,
+    pages = {3603-3607},
+      doi = {10.1093/mnras/stv291},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.448.3603D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010PhRvD..81b4019S,
+   author = {{Shapiro}, S.~L.},
+    title = "{Filling the disk hollow following binary black hole merger: The transient accretion afterglow}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {0912.2345},
+ primaryClass = "astro-ph.HE",
+ keywords = {Physics of black holes, Numerical studies of black holes and black-hole binaries, Wave generation and sources, Accretion and accretion disks},
+     year = 2010,
+    month = jan,
+   volume = 81,
+   number = 2,
+      eid = {024019},
+    pages = {024019},
+      doi = {10.1103/PhysRevD.81.024019},
+   adsurl = {http://adsabs.harvard.edu/abs/2010PhRvD..81b4019S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010ApJ...714..404T,
+   author = {{Tanaka}, T. and {Menou}, K.},
+    title = "{Time-dependent Models for the Afterglows of Massive Black Hole Mergers}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0912.2054},
+ keywords = {accretion, accretion disks, black hole physics, quasars: general, X-rays: galaxies},
+     year = 2010,
+    month = may,
+   volume = 714,
+    pages = {404-422},
+      doi = {10.1088/0004-637X/714/1/404},
+   adsurl = {http://adsabs.harvard.edu/abs/2010ApJ...714..404T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2012PhRvL.109v1102F,
+   author = {{Farris}, B.~D. and {Gold}, R. and {Paschalidis}, V. and {Etienne}, Z.~B. and 
+	{Shapiro}, S.~L.},
+    title = "{Binary Black-Hole Mergers in Magnetized Disks: Simulations in Full General Relativity}",
+  journal = {Physical Review Letters},
+archivePrefix = "arXiv",
+   eprint = {1207.3354},
+ primaryClass = "astro-ph.HE",
+ keywords = {Numerical studies of black holes and black-hole binaries, Relativistic fluid dynamics},
+     year = 2012,
+    month = nov,
+   volume = 109,
+   number = 22,
+      eid = {221102},
+    pages = {221102},
+      doi = {10.1103/PhysRevLett.109.221102},
+   adsurl = {http://adsabs.harvard.edu/abs/2012PhRvL.109v1102F},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..89f4060G,
+   author = {{Gold}, R. and {Paschalidis}, V. and {Etienne}, Z.~B. and {Shapiro}, S.~L. and 
+	{Pfeiffer}, H.~P.},
+    title = "{Accretion disks around binary black holes of unequal mass: General relativistic magnetohydrodynamic simulations near decoupling}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1312.0600},
+ primaryClass = "astro-ph.HE",
+ keywords = {Numerical relativity, Numerical studies of black holes and black-hole binaries, Relativistic fluid dynamics},
+     year = 2014,
+    month = mar,
+   volume = 89,
+   number = 6,
+      eid = {064060},
+    pages = {064060},
+      doi = {10.1103/PhysRevD.89.064060},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PhRvD..89f4060G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014PhRvD..90j4030G,
+   author = {{Gold}, R. and {Paschalidis}, V. and {Ruiz}, M. and {Shapiro}, S.~L. and 
+	{Etienne}, Z.~B. and {Pfeiffer}, H.~P.},
+    title = "{Accretion disks around binary black holes of unequal mass: General relativistic MHD simulations of postdecoupling and merger}",
+  journal = {\prd},
+archivePrefix = "arXiv",
+   eprint = {1410.1543},
+ keywords = {Numerical relativity, Numerical studies of black holes and black-hole binaries, Relativistic fluid dynamics},
+     year = 2014,
+    month = nov,
+   volume = 90,
+   number = 10,
+      eid = {104030},
+    pages = {104030},
+      doi = {10.1103/PhysRevD.90.104030},
+   adsurl = {http://adsabs.harvard.edu/abs/2014PhRvD..90j4030G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2001NewA....6...61N,
+   author = {{Nakamura}, M. and {Uchida}, Y. and {Hirose}, S.},
+    title = "{Production of wiggled structure of AGN radio jets in the sweeping magnetic twist mechanism}",
+  journal = {\na},
+     year = 2001,
+    month = apr,
+   volume = 6,
+    pages = {61-78},
+      doi = {10.1016/S1384-1076(01)00041-0},
+   adsurl = {http://adsabs.harvard.edu/abs/2001NewA....6...61N},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009AJ....138.1874L,
+   author = {{Lister}, M.~L. and {Cohen}, M.~H. and {Homan}, D.~C. and {Kadler}, M. and 
+	{Kellermann}, K.~I. and {Kovalev}, Y.~Y. and {Ros}, E. and {Savolainen}, T. and 
+	{Zensus}, J.~A.},
+    title = "{MOJAVE: Monitoring of Jets in Active Galactic Nuclei with VLBA Experiments. VI. Kinematics Analysis of a Complete Sample of Blazar Jets}",
+  journal = {\aj},
+archivePrefix = "arXiv",
+   eprint = {0909.5100},
+ primaryClass = "astro-ph.CO",
+ keywords = {BL Lacertae objects: general, galaxies: active, galaxies: jets, radio continuum: galaxies, quasars: general, surveys},
+     year = 2009,
+    month = dec,
+   volume = 138,
+    pages = {1874-1892},
+      doi = {10.1088/0004-6256/138/6/1874},
+   adsurl = {http://adsabs.harvard.edu/abs/2009AJ....138.1874L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2015MNRAS.453.1562G,
+   author = {{Graham}, M.~J. and {Djorgovski}, S.~G. and {Stern}, D. and 
+	{Drake}, A.~J. and {Mahabal}, A.~A. and {Donalek}, C. and {Glikman}, E. and 
+	{Larson}, S. and {Christensen}, E.},
+    title = "{A systematic search for close supermassive black hole binaries in the Catalina Real-time Transient Survey}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1507.07603},
+ keywords = {methods: data analysis, techniques: photometric, surveys, quasars: general, quasars: supermassive black holes},
+     year = 2015,
+    month = oct,
+   volume = 453,
+    pages = {1562-1576},
+      doi = {10.1093/mnras/stv1726},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.453.1562G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011ApJ...743..136O,
+   author = {{O'Shaughnessy}, R. and {Kaplan}, D.~L. and {Sesana}, A. and 
+	{Kamble}, A.},
+    title = "{Blindly Detecting Orbital Modulations of Jets from Merging Supermassive Black Holes}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1109.1050},
+ keywords = {black hole physics, cosmology: observations, radio continuum: general, surveys},
+     year = 2011,
+    month = dec,
+   volume = 743,
+      eid = {136},
+    pages = {136},
+      doi = {10.1088/0004-637X/743/2/136},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...743..136O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011ApJ...734L..37K,
+   author = {{Kaplan}, D.~L. and {O'Shaughnessy}, R. and {Sesana}, A. and 
+	{Volonteri}, M.},
+    title = "{Blindly Detecting Merging Supermassive Black Holes with Radio Surveys}",
+  journal = {\apjl},
+archivePrefix = "arXiv",
+   eprint = {1105.3653},
+ primaryClass = "astro-ph.HE",
+ keywords = {black hole physics, cosmology: observations, radio continuum: general, surveys},
+     year = 2011,
+    month = jun,
+   volume = 734,
+      eid = {L37},
+    pages = {L37},
+      doi = {10.1088/2041-8205/734/2/L37},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJ...734L..37K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
