Thank the referee

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -685,10 +685,10 @@ processes in the strong-field GR regime \citep{2005ApJ...629...15H}.
 
 \section*{Acknowledgments}
 
-We acknowledge useful discussions with Martin Haehnelt, Enrico
-Ramirez-Ruiz and Alberto Rorai.  This work was supported in part by
-NSF grant AST-1312034 (for A.~L.).  G.~K. gratefully acknowledges
-support by he FP7 ERC Advanced Grant Emergence-320596.
+We acknowledge helpful comments from the anonymous referee and useful
+discussions with Martin Haehnelt, Enrico Ramirez-Ruiz and Alberto
+Rorai.  This work was supported in part by NSF grant AST-1312034 (for
+A.~L.) and by the FP7 ERC Advanced Grant Emergence-320596 (for G.~K.).
 
 \bibliographystyle{mnras}
 \bibliography{refs} 
@@ -696,6 +696,4 @@ support by he FP7 ERC Advanced Grant Emergence-320596.
 \bsp
 \label{lastpage}
 \end{document}
-
-
 
