"Letter" is now "paper".

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -142,8 +142,8 @@ the expected abundance of GW sources.
   \label{fig:BH_orbit}
 \end{figure}
 
-In this Letter, we study the morphology of jets from binary BHs whose
-dynamics is doiminated by GW emission.  Jets in binary BHs have been
+In this paper, we study the morphology of jets from binary BHs whose
+dynamics is dominated by GW emission.  Jets in binary BHs have been
 studied in a number of previous works \citep{1980ApJ...238L.129S,
   1981ApJ...246L..65I, 1981ApJ...246L.141H, 1982ApJ...258L..63G,
   1982ApJ...253L...1G, 1982ApJ...262..478G}.  It has been shown that
@@ -186,7 +186,7 @@ the circumbinary accretion disk all the way until coalescence
 This opens up the possibility of jet production by one of the binary
 members during the binary's final phase of evolution before
 coalescence, i.e., when the binary's dynamics is dominated by GW
-emission.  In this Letter we study the morphology of such jets.
+emission.  In this paper we study the morphology of such jets.
 
 All of the above models of jet precession in binary BHs consider
 stable binaries, in which the time scale of evolution of the binary
@@ -638,8 +638,8 @@ $\dot{\mathcal{M}}$ by using Equation~(\ref{eqn:v}).
 Further parameters can be introduced in the dynamical model by
 considering unequal-mass binaries, eccentric orbits, and
 Post-Newtonian corrections, but we not develop this further in this
-Letter.  We make the code for implementing the model presented in this
-Letter and for fitting it to observed jets using MCMC analyses
+paper.  We make the code for implementing the model presented in this
+paper and for fitting it to observed jets using MCMC analyses
 available at \url{https://github.com/gkulkarni/JetMorphology} under
 the MIT open source software license.  This code can be used to
 explore parameter space of the model.
@@ -677,7 +677,7 @@ at high redshift, which would be difficult to detect with our method.
 However, future detectors such as eLISA are sensitive to GW emission
 from $10^7$--$10^9$ M$_\odot$ BHs \citep{2013CQGra..30x4009S}.  Pulsar
 Timing Arrays are sensitive to even higher binary masses.  Monitoring
-of jet morphologies for the features outlined in this letter will put
+of jet morphologies for the features outlined in this paper will put
 a lower bound on the expected abundance of bright GW
 sources. Moreover, combined GW and electromagnetic observations of
 compact binary mergers should enable detailed studies of astrophysical
