Correct typos as pointed out by referee

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -538,7 +538,7 @@ it is aligned closer to the line of sight, the forward jet is
 magnified due to apparant superluminal motion.  This will make it
 possible to resolve jets of objects that are farther away than the
 example in Figure~\ref{fig:jet_mdot1.0}.  Binaries with higher masses
-have large orbital periods that will result is a helix with wider
+have large orbital periods that will result in a helix with wider
 seperation between its cycles.  These objects would therefore be
 easier to detect.  We have not modelled the absolute surface
 brightness of jets, only relative variation in the jet brightness (as
@@ -580,11 +580,11 @@ Here $u$ is the azimuthal angle around the jet axis, $x$ and $y$ axes
 are in the plane of the sky, and the $z$ axis points to the observer.
 The $x^{-\alpha}$ term in the first two equations captures the
 widening opening angle of the jet, while the $(u/2\pi)^{\beta}$ term
-in the last equation parameterises the chirp.  This model can be fit
-to an observed jet on the sky by using two rotation matrices,
-$\mathcal{R}_\lambda$ and $\mathcal{R}_i$, which rotate the model
-in the above equtions to match with the jet precession axis and the
-jet symmetry axis.  These matrices are given by
+in the last equation parameterises the chirp.  This model can be
+fitted to an observed jet on the sky by using two rotation matrices,
+$\mathcal{R}_\lambda$ and $\mathcal{R}_i$, which rotate the model in
+the above equtions to match with the jet precession axis and the jet
+symmetry axis.  These matrices are given by
 
 \begin{flalign}
 \mathrm{R}_{i} \!=\!
@@ -612,7 +612,7 @@ we take this variation in $i$ and parameterise it as
   i = \gamma x + i_0.
 \end{equation}
 We thus arrive at a model with 7 parameters ($\alpha$, $\beta$,
-$\gamma$, $A$, $B$, $i_0$, $\lambda_0$), which can be fit to any
+$\gamma$, $A$, $B$, $i_0$, $\lambda_0$), which can be fitted to any
 observed jet, such as that in Figure~\ref{fig:jet_mdot1.0}.  Note that
 setting $\alpha$ and $\beta$ equal to $0$ yields the usual helical jet
 morphology, without the features discussed in this paper.  Thus, a
